# terraform-live

./: .gitignore  .pre-commit-config.yaml  README.md  digger-drift.yaml  digger.yaml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yaml
.github/scripts/: check-branch-name.sh  create-tag.sh
.github/workflows/: auto-tagging.yaml  digger_drift.yml  digger_workflow.yml
terragrunt/: root.hcl
terragrunt/projects/demo/: project.hcl
terragrunt/projects/demo/prod/: environment.hcl
terragrunt/projects/demo/prod/aws/: account.hcl
terragrunt/projects/demo/prod/aws/eu-west-2/: region.hcl
terragrunt/projects/demo/uat/: environment.hcl
terragrunt/projects/demo/uat/aws/eu-west-2/s3/demo-bucket/: terragrunt.hcl
terragrunt/projects/devops/: project.hcl
terragrunt/projects/devops/central/: environment.hcl
terragrunt/projects/devops/central/aws/: account.hcl
terragrunt/projects/devops/central/aws/eu-west-2/s3/tf-asset-bucket/: terragrunt.hcl
terragrunt/projects/devops/central/aws/eu-west-2/s3/tf-state-bucket/: terragrunt.hcl
terragrunt/projects/devops/central/aws/global/iam/github-oidc-provider/: terragrunt.hcl
terragrunt/projects/devops/central/aws/global/iam/tf-central-role/: terragrunt.hcl
terragrunt/projects/devops/central/aws/global/iam/tf-command-role/: terragrunt.hcl
terragrunt/projects/devops/central/aws/global/iam/tf-state-role/: terragrunt.hcl
terragrunt/projects/devops/prod/aws/: region.hcl
terragrunt/projects/devops/uat/aws/: account.hcl
(+8 files in other folders)
